--- a/main.html
+++ b/main.html
@@ -10,6 +10,32 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<form>
+		<label for="name" >Name*</label>
+		<input type="text" name="name" id="name" required ><br><br>
+		<label for="email" >Email*</label>
+		<input type="email" name="email" id="email" required ><br><br>
+		<label for="gender" >Gender*</label>
+		<input type="radio" name="gender" id="gender_m" required >
+		<label for="gender" >Male</label>
+		<input type="radio" name="gender" id="gender_f" required >
+		<label for="gender" >Female</label>
+		<br><br>
+		<label for="brand" >Laptop Brands</label>
+		<select id="laptop" name="brand">
+			<option value="" disabled selected>--Brand--</option>
+			<option value="Apple">Apple</option>
+			<option value="Asus">Asus</option>
+			<option value="HP">HP</option>
+		</select><br><br>
+		<label for="age" >Age*</label>
+		<input type="number" name="age" id="age" required ><br><br>
+		<label for="dob" >DOB*</label>
+		<input type="date" name="dob" id="dob" required ><br><br>
+		<label for="password" >Password*</label>
+		<input type="password" name="password" id="password" required ><br><br>
+		<button type="submit">Submit</button>
+	</form>
 
 </body>
 
