--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<form>
+	<form method="post">
 		<label for="name" >Name*</label>
 		<input type="text" name="name" id="name" required ><br><br>
 		<label for="email" >Email*</label>
@@ -21,7 +21,7 @@
 		<input type="radio" name="gender" id="gender_f" required >
 		<label for="gender" >Female</label>
 		<br><br>
-		<label for="brand" >Laptop Brands</label>
+		<label for="laptop" >Laptop Brands</label>
 		<select id="laptop" name="brand">
 			<option value="" disabled selected>--Brand--</option>
 			<option value="Apple">Apple</option>
