--- a/main.html
+++ b/main.html
@@ -34,7 +34,10 @@
 		<input type="date" name="dob" id="dob" required ><br><br>
 		<label for="password" >Password*</label>
 		<input type="password" name="password" id="password" required ><br><br>
-		<button type="submit">Submit</button>
+		<button type="submit">Submit</button><br><br>
+		<label for="portfolio">portfolio</label>
+		<input type="url" name="portfolio" id="portfolio"><br><br>
+		
 	</form>
 
 </body>
